...
          title: "Expense Details",
        }}
      />
      <Stack.Screen
        name="group/[id]/add-member"
        options={{
          title: "Add Member",
          presentation: "modal",
        }}
      />
      <Stack.Screen
        name="group/[id]/balances"
        options={{
...
